# Ai-powered-flipkart-assistant-with-ml

./: README.md  app.py  main.py  pyproject.toml  requirement.txt
Data/: churn.csv
Testing/: Chrurn_Datacleaning.ipynb  Churn_Eda.ipynb  churnModelDeploy.py  sentimentCleaning.ipynb  sentimentModel.py  testingVectorDb.py
models/: churn_xgb_pipeline.pkl  sentiment_pipeline.pkl
src/: createDocs_and_VectorDb.py  flipkart_rag_agent.py  mergePdf.py  nlp_preprocessor.py
testing_data/: sentiment_X_test.csv  sentiment_y_test.csv  x_test_sample.csv  y_test_sample.csv
